// Vitest Snapshot v1

exports[`schema validate test. > should throw an error on the patterns option: {"entries":"src/main.ts"} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest misses the property 'schemaVersion'. Should be:
   string
   -> The version number of the manifest.
 - Manifest.entries should be an object:
   object { … }"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"foo":"foo.js"},"exports":{"index":{}},"importmap":{"filename":{"esm":"esm-importmap.json","system":"system-importmap.json"}}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.importmap misses the property 'packageName'. Should be:
   string"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js","foo":"foo.html"}} 1`] = `"When \`entries\` configure multiple entries, you need to ensure that all of them are of \`html\` type or all of them are of \`non-html\` type."`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"env":{"123":{"server":{"port":4000}}}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.env has an unknown property '123'. These properties are valid:
   object {} (additional property names should match pattern \\"[a-zA-Z]+\\")
   -> env configuration for different environments."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"env":{"development":{"server":{"port":99999}}}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.env.development.server.port should be >= 0 and <= 65535."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"externals":{"123":"Vue"}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.externals has an unknown property '123'. These properties are valid:
   object {} (additional property names should match pattern \\"[a-zA-Z]+\\")"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"formats":"cjs"} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.formats should be an object:
   object { … } (additional property names should match pattern \\"[a-zA-Z]+\\")"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"formats":["umds"]} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.formats should be an object:
   object { … } (additional property names should match pattern \\"[a-zA-Z]+\\")"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"formats":{"foo":"cjs"}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.formats.foo should be an array:
   [\\"cjs\\" | \\"esm\\" | \\"iife\\" | \\"umd\\" | \\"system\\", ...]"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"importmap":{"packageName":1}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest should have properties 'exports' when property 'importmap' is present.
   -> Project manifest field in growing-web.
 - Manifest.importmap misses the property 'filename'. Should be:
   object { esm, system, … }
 - Manifest.importmap.packageName should be a string."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"outDir":123} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.outDir should be a string."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"server":{"host":100}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.server.host should be a string."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"server":{"port":"3000"}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.server.port should be a number (should be >= 0 and <= 65535)."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"server":{"proxy":[""]}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.server.proxy[0] should be an object:
   object { url, target, secure?, changeOrigin?, pathRewrite?, … }"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"server":{"proxy":[{"url":"/api","target":"https://xxx","pathRewrite":[{"regular":123,"replacement":""}]}]}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.server.proxy[0].pathRewrite[0].regular should be one of these:
   RegExp | string
   Details:
    * Manifest.server.proxy[0].pathRewrite[0].regular should be an instance of RegExp.
    * Manifest.server.proxy[0].pathRewrite[0].regular should be a string."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"server":{"proxy":[{}]}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.server.proxy[0] misses the property 'target'. Should be:
   string"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"sourcemap":"false"} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.sourcemap should be a boolean."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{}} 1`] = `"Please set entries, the current value of entries is {}."`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","externals":""} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest misses the property 'entries'. Should be:
   object { … }
 - Manifest.externals should be an object:
   object {} (additional property names should match pattern \\"[a-zA-Z]+\\")"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":1,"entries":{"index":"app.js"}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.schemaVersion should be a string.
   -> The version number of the manifest."
`;
